--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,15 +10,14 @@ services:
     ports:
       - 5001:5000
     environment:
-      - FLASK_APP=project/__init__.py
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig
-      - DATABASE_URL=postgres://postgres:postgres@variants-db:5432/variants_dev
-      - DATABASE_TEST_URL=postgres://postgres:postgres@variants-db:5432/variants_test
+      - DATABASE_URL=postgres://postgres:postgres@variant-db:5432/variant_dev
+      - DATABASE_TEST_URL=postgres://postgres:postgres@variant-db:5432/variant_test
     depends_on:
-      - variants-db
+      - variant-db
       
-  variants-db:
+  variant-db:
     build:
       context: ./services/genes/project/db
       dockerfile: Dockerfile
