--- a/services/client/package.json
+++ b/services/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.1.0",
+    "axios": "^0.17.1",
+    "babel-loader": "^8.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
