--- a/services/client/.gitignore
+++ b/services/client/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
@@ -8,8 +6,10 @@
 
 # production
 /build
+styles/**/*.css
 
 # misc
+/.vscode
 .DS_Store
 .env.local
 .env.development.local
