--- a/services/client/package.json
+++ b/services/client/package.json
@@ -18,7 +18,7 @@
     "build-css": "node-sass-chokidar src/styles/ -o src/styles/",
     "watch-css": "npm run build-css && node-sass-chokidar src/styles/ -o src/styles/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "REACT_APP_GENES_SERVICE_URL=http://localhost npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
